# AR-Gesture-Interaction-System

./: CMakeLists.txt  LICENSE
asset/: UI_0001.ui  UI_0003.ui
include/identfy/: identify-hands.hpp
include/interact/: interact-ui.hpp
sample/: UI.py  UI_0004.ui  main.py
src/: main.cpp
src/identify/: identify-hands.cpp
src/interact/: interact-ui.cpp
tests/: main 2.py  main.py
